UC authentication updated